GG-49228 Support cross-JDK compatibility tests (#3719)